@startuml

Title Bazar Finite State Machine

hide empty description

legend top
<#transparent,#transparent>|  |\
""**States**:"" \n\
 • ""NO_BET"" \n\
 • ""BET"" \n\
 • ""CAPO_BET"" \n\
 • ""CONTRA"" \n\
 • ""REDIAL"" \n\
 • ""PLAY"" \
|   |\
""@dataclass"" \n\
""class **Memory**:"" \n\
""    current_player:  Player"" \n\
""    pass_count:      int = 0"" \n\
""    last_bet_player: Optional[Player] = None"" \n\
""    last_bet_suit:   Optional[Suit] = None"" \n\
""    last_bet_amount: Optional[int] = None"" \n\
""    capo:            bool = False"" \n\
""    contra:          bool = False"" \n\
""    recontra:        bool = False"" \
|       |\
""**Events**:"" \n\
 • ""PASS"" \n\
 • ""BET"" \n\
 • ""CAPO_BET"" \n\
 • ""CONTRA"" \n\
 • ""RECONTRA"" \n\
 • ""TIMEOUT"" \
|   |\
""@dataclass"" \n\
""class **EventData**:"" \n\
""    player: Optional[Player] = None"" \n\
""    suit:   Optional[Suit] = None"" \n\
""    amount: Optional[int] = None"" \
|  |
end legend

state NO_BET
state BET
state CAPO_BET
state CONTRA
state REDIAL
state PLAY

' Events:
' PASS #green, #lightgreen
' BET
' CAPO_BET #darkblue, #aliceblue
' CONTRA
' RECONTRA
' TIMEOUT

[*] --> NO_BET

NO_BET --> BET
note on link
  === BET
  * is_current_player
  * is_bet_at_least_8
  -- --
  * save_bet
  * reset_pass_count
  * go_to_next_user
end note

BET --> BET
note on link
  === BET
  * is_current_player
  * is_bet_increased
  -- --
  * save_bet
  * reset_pass_count
  * go_to_next_user
end note

NO_BET -[#darkblue]-> CAPO_BET
note on link #aliceblue
  === CAPO_BET
  * is_current_player
  * is_bet_at_least_25
  -- --
  * save_bet
  * mark_capo_true
  * reset_pass_count
  * go_to_next_user
end note

BET -[#darkblue]-> CAPO_BET
note on link #aliceblue
  === CAPO_BET
  * is_current_player
  * is_bet_at_least_25
  * is_bet_increased
  -- --
  * save_bet
  * mark_capo_true
  * reset_pass_count
  * go_to_next_user
end note

CAPO_BET -[#darkblue]-> CAPO_BET
note on link #aliceblue
  === CAPO_BET
  * is_current_player
  * is_bet_increased
  -- --
  * save_bet
  * reset_pass_count
  * go_to_next_user
end note

NO_BET -[#green]-> NO_BET
note on link #lightgreen
  === PASS
  * is_current_player
  * is_not_4th_pass
  -- --
  * increment_pass_count
  * go_to_next_user
end note

BET -[#green]> BET
note on link #lightgreen
  === PASS
  * is_current_player
  * is_not_4th_pass
  -- --
  * increment_pass_count
  * go_to_next_user
end note

CAPO_BET -[#green]> CAPO_BET
note on link #lightgreen
  === PASS
  * is_current_player
  * is_not_4th_pass
  -- --
  * increment_pass_count
  * go_to_next_user
end note

NO_BET -l[#green]-> REDIAL
note on link #lightgreen
  === PASS
  * is_current_player
  * is_4th_pass
  -- --
  * increment_pass_count
end note

BET -[#green]-> PLAY
note on link #lightgreen
  === PASS
  * is_current_player
  * is_4th_pass
  -- --
  * increment_pass_count
end note

CAPO_BET -[#green]-> PLAY
note on link #lightgreen
  === PASS
  * is_current_player
  * is_4th_pass
  -- --
  * increment_pass_count
end note

BET --> CONTRA
note on link
  === CONTRA
  * is_last_bet_from_another_team
  -- --
  * mark_contra_true
end note

CAPO_BET --> CONTRA
note on link
  === CONTRA
  * is_last_bet_from_another_team
  -- --
  * mark_contra_true
end note

CONTRA --> PLAY
note on link
  === RECONTRA
  * is_last_bet_from_same_team
  -- --
  * mark_recontra_true
end note

CONTRA --> PLAY
note on link
  === TIMEOUT
end note

@enduml
